--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -361,15 +361,16 @@ main {
     }
 
     .ul_sujestoes {
-        margin-top: 1rem;
-        position: sticky;
-        width: 100%;
         display: flex;
-        overflow: scroll;
         gap: 1rem;
+        width: 100%;
+        height: 431px;
+        margin-top: 1rem;
+        overflow: hidden;
+        position: sticky;
         margin-bottom: 2rem;
-        -webkit-mask-image: linear-gradient(to right, rgb(0, 0, 0) 1%, transparent);
         flex-direction: column;
+        -webkit-mask-image: linear-gradient(to right, rgb(0, 0, 0) 1%, transparent);
     }
 
 }
